--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.Roo_Media_.lottowish">
+    package="com.roomedia.lottowish">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.roomedia.lottowish.MyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,9 +23,9 @@
             android:value="ca-app-pub-8418699849772106~8459879415" />
 
         <activity
-            android:name="com.Roo_Media_.lottowish.ui.MainActivity"
+            android:name="com.roomedia.lottowish.ui.MainActivity"
             android:configChanges="keyboardHidden"
-            android:label="@string/app_name"
+            android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
@@ -36,7 +37,7 @@
         </activity>
 
         <activity
-            android:name="com.Roo_Media_.lottowish.ui.wish.WishActivity"
+            android:name="com.roomedia.lottowish.ui.wish.WishActivity"
             android:configChanges="keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
@@ -44,7 +45,7 @@
             tools:ignore="LockedOrientationActivity" />
 
         <activity
-            android:name="com.Roo_Media_.lottowish.ui.gamelist.QRPortraitActivity"
+            android:name="com.roomedia.lottowish.ui.gamelist.QRPortraitActivity"
             android:configChanges="keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
@@ -54,7 +55,7 @@
             tools:ignore="LockedOrientationActivity" />
 
         <receiver
-            android:name="com.Roo_Media_.lottowish.utils.NotifyReceiver"
+            android:name="com.roomedia.lottowish.utils.NotifyReceiver"
             android:exported="false" />
     </application>
 
